// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo() {}

module.exports = foo;

module.exports.x = 1;

=====================================output=====================================
// @flow

function foo() {}

module.exports = foo;

module.exports.x = 1;

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const a = require('./a');

(a: () => void);
(a.x: number);
(a.x: string);
(a.other: number);

const poly_a = require('./poly_a');

(poly_a: () => void);
(poly_a: <T>() => void);
(poly_a.x: number);
(poly_a.x: string);
(poly_a.other: number);

=====================================output=====================================
// @flow

const a = require("./a");

(a: () => void);
(a.x: number);
(a.x: string);
(a.other: number);

const poly_a = require("./poly_a");

(poly_a: () => void);
(poly_a: <T>() => void);
(poly_a.x: number);
(poly_a.x: string);
(poly_a.other: number);

================================================================================
`;

exports[`poly_a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo<T>() {}

module.exports = foo;

module.exports.x = 1;

=====================================output=====================================
// @flow

function foo<T>() {}

module.exports = foo;

module.exports.x = 1;

================================================================================
`;
